디렉토리 정리 및 모듈 분리

--- a/ui/Candy/index.html
+++ b/ui/Candy/index.html
@@ -9,33 +9,33 @@
 </head>
 <body>
   <section>
-    <img src="./img/candy9.png" alt="candy4" class="candy9">
+    <img src="./img/9.png" alt="candy" class="candy9">
     <div class="slider">
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy6.png" alt="candy6"></a>
+            <a href="#"><img src="./img/6.png" alt="candy"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy7.png" alt="candy6"></a>
+            <a href="#"><img src="./img/7.png" alt="candy"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy8.png" alt="candy6"></a>
+            <a href="#"><img src="./img/8.png" alt="candy"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy1.png" alt="candy1"></a>
+            <a href="#"><img src="./img/1.png" alt="candy"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy2.png" alt="candy2"></a>
+            <a href="#"><img src="./img/2.png" alt="candy"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy3.png" alt="candy3"></a>
+            <a href="#"><img src="./img/3.png" alt="candy"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy4.png" alt="candy4"></a>
+            <a href="#"><img src="./img/4.png" alt="candy"></a>
           </div>
           <div class="swiper-slide">
-            <a href="#"><img src="./img/candy5.png" alt="candy5"></a>
+            <a href="#"><img src="./img/5.png" alt="candy"></a>
           </div>
         </div>
       </div>
