--- a/ui/Tea/index.html
+++ b/ui/Tea/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Document</title>
+  <title>Tea</title>
 </head>
 <body>
   <div class="container">
