--- a/ui/Candy/index.html
+++ b/ui/Candy/index.html
@@ -42,21 +42,6 @@
     </div>
   </section>
   <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-  <script>
-    var swiper = new Swiper('.swiper-container', {
-      effect: 'coverflow',
-      grabCursor: true,
-      centeredSlides: true,
-      slidesPerView: 'auto',
-      coverflowEffect: {
-        rotate: 0,
-        stretch: 0,
-        depth: 0,
-        modifier: 1,
-        slideShadows: true,
-      },
-      loop: true,
-    });
-  </script>
+  <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
