--- a/ui/Flower/index.html
+++ b/ui/Flower/index.html
@@ -21,17 +21,6 @@
       <img src="./img/6.png" class="layer flower-6" data-speed="1">
     </div>
   </section>
-  <script type="text/javascript">
-    document.addEventListener("mousemove", parallax);
-    function parallax(e) {
-      this.querySelectorAll('.layer').forEach(layer => {
-        const speed = layer.getAttribute('data-speed')
-
-        const x = (window.innerWidth - e.pageX*speed)/100
-        const y = (window.innerHeight - e.pageY*speed)/100
-        layer.style.transform = `translate3d(${x}px, ${y}px, 0)`
-      })
-    }
-  </script>
+  <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
