--- a/ui/11-Spinner-effect/index.html
+++ b/ui/11-Spinner-effect/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="intro">
     <img src="./img/1.jpg" class="bg">
-    <h2 class="splite-text">Hover & Spinner effect</h2>
+    <h2 class="split-text">Hover & Spinner effect</h2>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
