--- a/ui/4-Cloud/index.html
+++ b/ui/4-Cloud/index.html
@@ -24,11 +24,12 @@
   </section>
   <section>
     <h2>Image Parallax & Title fade-in Effects</h2>
-    <p>2020. 12. 07</p>
     <div class="contents">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-      <img src="./img/bg.jpg" alt="background">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+      <p>Parallax에 사용된 배경 이미지 입니다.</p>
+      <p>background-position을 top으로 주면 하늘색 이미지가 나오고</p>
+      <p>bottom으로 주면 아래에 안개 부분이 나옵니다.</p>
+      <img src="./img/bg1.jpg" alt="background">
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
     </div>
   </section>
   <script src="./script.js" type="text/javascript"></script>
