--- a/ui/3-1-Salad/index.html
+++ b/ui/3-1-Salad/index.html
@@ -8,6 +8,9 @@
   <title>Salad carousel</title>
 </head>
 <body>
+<!-- Salad slide 만드는 방법
+https://diary-blog.github.io/salad-carousel-slide/ -->
+
   <div class="title">
     <h2>Salad Collection</h2>
     <p>2021년엔 샐러드 먹고 다이어트 성공해보자! <br /> 내가 먹는건 모두 100칼로리!</p>
@@ -18,7 +21,7 @@
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <div>
+            <div class="menu">
               <p>Salad1</p>
               <p>Olive, onion</p>
               <p>Tomato</p>
@@ -27,10 +30,14 @@
               <p>mozzarella</p>
               <p class="kcal">100 kal</p>
             </div>
-            <a href="#"><img src="./img/1.png" alt="salad"></a>
+            <div class="salad-img">
+              <a href="#">
+                <img src="./img/1.png" alt="salad">
+              </a>
+            </div>
           </div>
           <div class="swiper-slide">
-            <div>
+            <div class="menu">
               <p>Salad2</p>
               <p>Cabbage</p>
               <p>Lettuce</p>
@@ -38,10 +45,14 @@
               <p>vegetable</p>
               <p class="kcal">100 kal</p>
             </div>
-            <a href="#"><img src="./img/2.png" alt="salad"></a>
+            <div class="salad-img">
+              <a href="#">
+                <img src="./img/2.png" alt="salad">
+              </a>
+            </div>
           </div>
           <div class="swiper-slide">
-            <div>
+            <div class="menu">
               <p>Salad3</p>
               <p>Lettuce</p>
               <p>tomato</p>
@@ -49,10 +60,14 @@
               <p>chicken breast</p>
               <p class="kcal">100 kal</p>
             </div>
-            <a href="#"><img src="./img/3.png" alt="salad"></a>
+            <div class="salad-img">
+              <a href="#">
+                <img src="./img/3.png" alt="salad">
+              </a>
+            </div>
           </div>
           <div class="swiper-slide">
-            <div>
+            <div class="menu">
               <p>Salad4</p>
               <p>vegetable</p>
               <p>tomato</p>
@@ -60,7 +75,11 @@
               <p>onion</p>
               <p class="kcal">100 kal</p>
             </div>
-            <a href="#"><img src="./img/4.png" alt="salad"></a>
+            <div class="salad-img">
+              <a href="#">
+                <img src="./img/4.png" alt="salad">
+              </a>
+            </div>
           </div>
         </div>
       </div>
