--- a/ui/12-Glow-light/index.html
+++ b/ui/12-Glow-light/index.html
@@ -7,9 +7,14 @@
   <title>Glow light</title>
 </head>
 <body>
+  
+  <!-- 빛나는 불빛 만드는 방법
+  https://diary-blog.github.io/glow-light/ -->
+
   <div class="container">
     <div class="title">
       <p>Happy Christmas!</p>
+      <p>행복한 연말 보내세요!</p>
     </div>
     <div class="stage" id="stage1"></div>
   </div>
