--- a/ui/5-1-Car-parallax/index.html
+++ b/ui/5-1-Car-parallax/index.html
@@ -9,7 +9,7 @@
 <body>
   <section class="zoom">
     <h1 id="text">Car background parallax</h1>
-    <img src="./img/2.png" alt="mountain" id="layer2">
+    <img src="./img/2.png" alt="car" id="layer2">
     <div class="box" id="layer1">
       <ul class="menu">
         <li>WFEDEV</li>
