--- a/ui/4-Cloud/index.html
+++ b/ui/4-Cloud/index.html
@@ -21,15 +21,18 @@
       <img src="./img/4.png" alt="cloud" style="--i:9;" class="cloud">
       <img src="./img/5.png" alt="cloud" style="--i:10;">
     </div>
+    <p id="text" style="--i:1;">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio laborum enim sapiente quis quidem nulla
+    </p>
+    <a href="#">more</a>
   </section>
   <section>
-    <h2>Image Parallax & Title fade-in Effects</h2>
+    <h3>Image Parallax & Title fade-in Effects</h3>
     <div class="contents">
       <p>Parallax에 사용된 배경 이미지 입니다.</p>
       <p>background-position을 top으로 주면 하늘색 이미지가 나오고</p>
       <p>bottom으로 주면 아래에 안개 부분이 나옵니다.</p>
       <img src="./img/bg1.jpg" alt="background">
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
     </div>
   </section>
   <script src="./script.js" type="text/javascript"></script>
