컴파일 그만되게 적용

--- a/ui/1-1-Humidifier/index.html
+++ b/ui/1-1-Humidifier/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- usign image 
+    <!-- using image 
     https://item.taobao.com/item.htm?spm=a230r.1.14.102.509071f1wapkYW&id=558544067203&ns=1&abbucket=8#detail -->
     <img src="./img/1.png" alt="humidifier" class="humidifier">
     <div class="vapour">
