Diagonal font edit

--- a/ui/14-Diagonal/index.html
+++ b/ui/14-Diagonal/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="title">
     <h1>
-      <span>It's text</span>
+      <span>lorem text</span>
       <span>Mix blend</span>
       <span>color mode,</span>
       <span>Diagonal.</span>
