--- a/ui/1-10/10-Envelope/index.html
+++ b/ui/1-10/10-Envelope/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
   <link rel="stylesheet" href="style.css">
-  <title>Envelope scroll event</title>
+  <title>Envelope ScrollTrigger</title>
 </head>
 <body>
   <div class="container">
     <section class="section index">
-      <p>Envelope Scroll Event</p>
+      <p>Envelope ScrollTrigger</p>
     </section>
     <section class="section content bg1">
       <p>Section <span>1</span></p>
@@ -20,10 +20,10 @@
       <p>Section <span>2</span></p>
       <p data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </section>
-    <section class="section content bg3">
+    <!-- <section class="section content bg3">
       <p>Section <span>3</span></p>
       <p data-splitting>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    </section>
+    </section> -->
   </div>
 
   <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
