--- a/ui/11-20/16-Signup/index.html
+++ b/ui/11-20/16-Signup/index.html
@@ -12,7 +12,7 @@
       <fieldset>
         <legend>Sign up</legend>
         <div class="field">
-          <input id="signup-user-name" type="text" autocomplete="off" onkeyup='userName()'>
+          <input id="signup-user-name" type="text" autocomplete="off" onchange='userName()'>
           <label for="signup-user-name">Name</label>
           <span class="line"></span>
         </div>
