--- a/pages/5/index.html
+++ b/pages/5/index.html
@@ -12,7 +12,8 @@
   <main>
     <section>
       <p class="title">Created web contents</p>
-      <div><img src="./img/1.png" alt="image"/>
+      <div>
+        <img src="./img/1.png" alt="image"/>
         <p>Couputer graphics</p>
         <p>
           <a href="https://docs.google.com/presentation/d/1fekpdBrNtVm4jZoUzntAA6Qdin-Xaj2FXx_8JaHmsek/edit?usp=sharing" target="_blank">PPT</a>
@@ -37,7 +38,7 @@
       </div>
       <div>
         <img src="./img/4.png" alt="image"/>
-        UX Animation
+        <p>UX Animation</p>
         <p>
           <a href="https://www.figma.com/file/r6v3xlymx1Zn65VRPcremW/UX?type=design&node-id=0%3A1&mode=design&t=JUhowd8Sy3dce7s8-1" target="_blank">figma</a>
           <a href="https://www.figma.com/proto/r6v3xlymx1Zn65VRPcremW/UX?type=design&node-id=16-2&t=JUhowd8Sy3dce7s8-0&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=16%3A2&show-proto-sidebar=1" target="_blank">prototype</a>
@@ -45,7 +46,7 @@
       </div>
       <div>
         <img src="./img/5.png" alt="image"/>
-        Drawing with code
+        <p>Drawing with code</p>
         <p>
           <a href="https://github.com/webgldev/drawingwithcode" target="_blank">Repo</a>
           <a href="" target="_blank">Deploy</a>
