--- a/pages/4/index.html
+++ b/pages/4/index.html
@@ -12,12 +12,12 @@
   <main>
     <section>
       <p class="title">iPad Drawing</p>
-      <div><img src="./img/1.png" alt="image"/><p>seoul bike</p><p><a href="">Procreate</a></p></div>
-      <div><img src="./img/2.png" alt="image"/><p>rose</p><p><a href="">Procreate</a></p></div>
-      <div><img src="./img/3.png" alt="image"/><p>tulip</p><p><a href="">Procreate</a></p></div>
-      <div><img src="./img/4.png" alt="image"/><p>carrot cake</p><p><a href="">Procreate</a></p></div>
-      <div><img src="./img/5.png" alt="image"/><p>strawberry</p><p><a href="">Procreate</a></p></div>
-      <div><img src="./img/6.png" alt="image"/><p>wine</p><p><a href="">Procreate</a></p></div>
+      <div><img src="./img/1.png" alt="image"/><p>seoul bike</p><p><span class="tooltip">Procreate</span></p></div>
+      <div><img src="./img/2.png" alt="image"/><p>rose</p><p><span class="tooltip">Procreate</span></p></div>
+      <div><img src="./img/3.png" alt="image"/><p>tulip</p><p><span class="tooltip">Procreate</span></p></div>
+      <div><img src="./img/4.png" alt="image"/><p>carrot cake</p><p><span class="tooltip">Procreate</span></p></div>
+      <div><img src="./img/5.png" alt="image"/><p>strawberry</p><p><span class="tooltip">Procreate</span></p></div>
+      <div><img src="./img/6.png" alt="image"/><p>wine</p><p><span class="tooltip">Procreate</span></p></div>
     </section>
   </main>
 </body>
