--- a/pages/5/index.html
+++ b/pages/5/index.html
@@ -49,7 +49,7 @@
         <p>Drawing with code</p>
         <p>
           <a href="https://github.com/webgldev/drawingwithcode" target="_blank">Repo</a>
-          <a href="" target="_blank">Deploy</a>
+          <a href="https://webgldev.github.io/drawingwithcode/" target="_blank">Deploy</a>
         </p>
       </div>
     </section>
