change url repository

--- a/pages/5/index.html
+++ b/pages/5/index.html
@@ -32,8 +32,8 @@
         <img src="./img/3.png" alt="image"/>
         <p>Dynamic Browser</p>
         <p>
-          <a href="https://github.com/fe-w/basic" target="_blank">Repo</a>
-          <a href="https://fe-w.github.io/basic" target="_blank">Deploy</a>
+          <a href="https://github.com/js-diffusion/basic" target="_blank">Repo</a>
+          <a href="https://js-diffusion.github.io/basic/" target="_blank">Deploy</a>
         </p>
       </div>
       <div>
